Revert "exe_frontend need to be a library to ensure .mod is generated"
This reverts commit da667f9e0098985539bce90eda7b131ccb50719a.

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -37,7 +37,7 @@ if(hwm14)
 endif()
 configure_file(exe_frontend.in.f90 exe_frontend.f90 @ONLY)
 
-add_library(exe_frontend cpu_count.cpp ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90)
+add_library(exe_frontend OBJECT cpu_count.cpp ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90)
 target_compile_features(exe_frontend PRIVATE cxx_std_11)
 target_compile_definitions(exe_frontend PRIVATE $<$<BOOL:${MSVC}>:_CRT_SECURE_NO_WARNINGS>)
 target_link_libraries(exe_frontend PRIVATE gemini3d_config timeutils const
