--- a/test/potential/CMakeLists.txt
+++ b/test/potential/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_property(DIRECTORY PROPERTY  LABELS potential)
+set_property(DIRECTORY PROPERTY LABELS potential)
 
 # --- potential 2D test
 
@@ -29,8 +29,6 @@ LABELS "unit"
 
 dll_test_path("h5fortran::h5fortran;MUMPS::MUMPS" potential2d)
 
-if(H5PY_FOUND)
-
 add_test(NAME potential2d:python
 COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${_potential2d_testfile}
 )
@@ -39,9 +37,8 @@ REQUIRED_FILES ${_potential2d_testfile}
 TIMEOUT 10
 LABELS "unit;python"
 FIXTURES_REQUIRED gemini_potential_fxt
+DISABLED $<NOT:$<BOOL:${H5PY_FOUND}>>
 )
-
-endif()
 
 
 # --- potential 3D test
