--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,6 @@ jobs:
 
     strategy:
       matrix:
-        msis2: [true, false]
         # hwm14: [true, false]
         hwm14: [false]
         # TODO: temp workaround for fclaw_prep3
@@ -67,7 +66,7 @@ jobs:
     - name: Install model libraries
       timeout-minutes: 15
       run: |
-        cmake -Sgemext -Bgemext/build -Dfind:BOOL=true -Dmsis2:BOOL=${{ matrix.msis2 }} -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
+        cmake -Sgemext -Bgemext/build -Dfind:BOOL=true -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
         cmake --build gemext/build --target ffilesystem glow hwm14 iniparser msis mumps
         cmake --install gemext/build
 
@@ -78,7 +77,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Configure multi
-      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} -Dmsis2:BOOL=${{ matrix.msis2 }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
+      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
 
     - name: Debug build
       run: cmake --build --parallel --preset debug
