--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -196,8 +196,12 @@ if(cpp)
 # --- Gemini_c.bin
 # C++ main program just like Fortran gemini.bin
 
-find_package(iniparser CONFIG REQUIRED)
 # for gemini_c C++ front end
+find_package(iniparser CONFIG)
+if(NOT iniparser_FOUND)
+  set(cpp false)
+  return()
+endif()
 
 add_library(gemini3d_cpp libgemini.cpp)
 target_include_directories(gemini3d_cpp PUBLIC
@@ -221,6 +225,13 @@ $<$<BOOL:${MSVC}>:_CRT_SECURE_NO_WARNINGS>
 #$<$<BOOL:${MSVC}>:_ALLOW_ITERATOR_DEBUG_LEVEL_MISMATCH>
 #$<$<BOOL:${MSVC}>:_HAS_ITERATOR_DEBUGGING=1>
 #$<$<BOOL:${MSVC}>:_ITERATOR_DEBUG_LEVEL=2>
+install(TARGETS gemini3d_cpp EXPORT ${PROJECT_NAME}-targets)
+
+
+if(ffilesystem_VERSION VERSION_LESS 4.0)
+  set(cpp false)
+  return()
+endif()
 
 add_executable(gemini_c.bin ${PROJECT_SOURCE_DIR}/app/main.cpp)
 set_target_properties(gemini_c.bin PROPERTIES
@@ -245,8 +256,6 @@ target_compile_definitions(gemini_c.bin PRIVATE
 $<$<BOOL:${MSVC}>:_CRT_SECURE_NO_WARNINGS>
 )
 
-install(TARGETS gemini_c.bin gemini3d_cpp
-EXPORT ${PROJECT_NAME}-targets
-)
+install(TARGETS gemini_c.bin EXPORT ${PROJECT_NAME}-targets)
 
 endif(cpp)
