--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       timeout-minutes: 15
       run: |
         cmake -Sgemext -Bgemext/build -Dfind:BOOL=true -DCMAKE_INSTALL_PREFIX=${{ runner.temp }}
-        cmake --build gemext/build --target ffilesystem glow hwm14 iniparser msis mumps
+        cmake --build gemext/build --target ffilesystem glow hwm14 iniparser msis mumps --parallel
         cmake --install gemext/build
 
     - uses: actions/setup-python@v4
