--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,11 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Configure multi
-      run: cmake --preset multi -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }} -Dhwm14:BOOL=${{ matrix.hwm14 }}
+      run: >-
+        cmake --preset multi
+        -DCMAKE_PREFIX_PATH:PATH=${{ runner.temp }}
+        -Dhwm14:BOOL=${{ matrix.hwm14 }}
+        -DCMAKE_COMPILE_WARNING_AS_ERROR:BOOL=ON
 
     - name: Debug build
       run: cmake --build --parallel --preset debug
