--- a/test/temporal/CMakeLists.txt
+++ b/test/temporal/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_property(DIRECTORY PROPERTY  LABELS temporal)
+set_property(DIRECTORY PROPERTY LABELS temporal)
 
 add_executable(test_formats test_formats.f90)
 target_link_libraries(test_formats PRIVATE timeutils const)
@@ -12,4 +12,4 @@ add_executable(test_sza test_sza.f90)
 target_link_libraries(test_sza PRIVATE timeutils const)
 add_test(NAME SolarZenithAngle COMMAND test_sza)
 
-set_tests_properties(DateFormats DateRollover SolarZenithAngle PROPERTIES LABELS unit TIMEOUT 10)
+set_property(TEST DateFormats DateRollover SolarZenithAngle PROPERTY LABELS unit)
